# Face_Recognition_Attendance_System

./: README.md  pyproject.toml
4_app/: Home.py  face_rec.py
4_app/pages/: 1_Real_Time_Prediction.py  2_Registration_form.py  3_Report.py
tests/: insightface_test.py
