[tool.poetry]
name = "face-recognition-attendance-system"
version = "0.1.0"
description = ""
authors = ["will <will413028@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
insightface = "^0.7.3"
onnxruntime = "^1.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
